Fix horizontal scroll after vertical scroll

--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,8 @@ body {
 .layout > * {
   height: 100%;
   overflow-y: auto;
-  overscroll-behavior: contain;
+  overscroll-behavior-x: auto;
+  overscroll-behavior-y: contain;
 }
 
 .layout::-webkit-scrollbar {
